Fix youtube error z-index

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -753,6 +753,7 @@ img.prevPhoto:hover, img.nextPhoto:hover{
 		bottom:45%;
 		width:75%;
 		left:12%;
+		z-index:3;
 	}
 }
 
